--- a/curso js/exe14/css/style..css
+++ b/curso js/exe14/css/style..css
@@ -5,7 +5,6 @@
   }
   
   body {
-      background-color: rgb(218, 199, 138);
       font-family: Arial, Helvetica, sans-serif;
   }
   
@@ -17,14 +16,14 @@
       height: 400px;
   }
   
-  section>p {
+  #msg {
       text-align: center;
       font-size: 20px;
       margin-top: 40px;
   }
   
-  .img {
-      margin-top: 30px;
+  #img {
+      margin-top: -30px;
       display: flex;
       justify-content: center;
   }
